--- a/Estilos.css/estilos.css
+++ b/Estilos.css/estilos.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #62d1c4; /* Fondo verde menta */
+    background-color: #95f1e7; /* Fondo verde menta */
     display: flex;
     justify-content: center;
     align-items: center;
