--- a/css/primavera.css
+++ b/css/primavera.css
@@ -2,6 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: #4ed1943b;
   }
   
   .container {
@@ -14,10 +15,20 @@ body {
   header {
     text-align: center;
     padding: 20px 0;
+
+  }
+ 
+  h1{
+    font-size: 48px;
+  }
+  h2{
+    font-size: 24px;
+    color: #EBA250;
   }
   
   /* Estilos para el buscador */
   .search {
+    justify-content: flex-start;
     text-align: center;
     margin-bottom: 20px;
   }
@@ -25,40 +36,77 @@ body {
   /* Estilos para los botones */
   .buttons {
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
   }
-  
+  svg{
+    justify-content: flex-end;
+  }
   .buttons a {
     display: inline-block;
-    margin: 10px;
-    padding: 10px 20px;
-    background-color: #da981f;
-    color: #94e0b1;
+    color:white;
     text-decoration: none;
-    border-radius: 4px;
   }
+  .buttons button{
+    background-color: #EBA250;
+  } 
   
   /* Estilos para las secciones */
   .sections {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-  }
-  
-  .section {
     width: 200px;
-    height: 200px;
+    height: 100px;
     margin: 10px;
-    background-color: #f5f5f5;
+    background-color:#A883EB;
     text-align: center;
-    line-height: 200px;
+    line-height: 100px;
     font-size: 24px;
     color: #333;
   }
   
+  .section {
+    width: 100px;
+    height: 100px;
+    margin: 10px;
+    background-color:#A883EB;
+    text-align: center;
+    line-height: 100px;
+    font-size: 24px;
+    color: #333;
+    justify-content: center;
+  }
+  figure{
+    background-color: #9E713E;
+    border-radius: 10px;
+    text-align: center;
+  }
+  img{
+    width: 200px;
+    height: 200px;
+    border-radius: 30px;
+  }
+  #productos{
+    display: flex;
+  }
+  #productos2{
+    display: flex;
+  }
+  #shorts{
+    display: flex;
+  }
+  #shorts2{
+    display: flex;
+  }
+  #blusas{
+    display: flex;
+  }
+  #blusas2{
+    display: flex;
+  }
   /* Estilos para el pie de página */
   footer {
-    background-color: #f5f5f5;
+    background-color: #B2F3BE;
     padding: 20px;
     text-align: center;
   }
