--- a/Estilos.css/paginap.css
+++ b/Estilos.css/paginap.css
@@ -58,12 +58,12 @@ body {
     width: 200px;
     height: 100px;
     margin: 10px;
+    background-color:#A883EB;
     text-align: center;
     line-height: 100px;
     font-size: 24px;
     color: #333;
   }
-  
   
   .section {
     width: 100px;
@@ -71,15 +71,10 @@ body {
     margin: 10px;
     background-color:#A883EB;
     text-align: center;
-    line-height: 80px;
+    line-height: 100px;
     font-size: 24px;
     color: #333;
-  }
-  .sections{
-    width: 190px;
-      height: 80px;
-      margin-left: auto;
-      margin-right: auto;
+    justify-content: center;
   }
   .info{
     background-color: #9E713E;
@@ -92,6 +87,24 @@ body {
     border-radius: 30px;
   }
   
+  #productos{
+    display: flex;
+  }
+  #productos2{
+    display: flex;
+  }
+  #shorts{
+    display: flex;
+  }
+  #shorts2{
+    display: flex;
+  }
+  #blusas{
+    display: flex;
+  }
+  #blusas2{
+    display: flex;
+  }
   /* Estilos para el pie de página */
   footer {
     background-color: #B2F3BE;
@@ -118,13 +131,10 @@ body {
     display: inline-block;
     width: 30px;
     height: 30px;
-    
+    background-color: #ccc;
     color: #4ed194;
     text-align: center;
     line-height: 30px;
     border-radius: 50%;
     text-decoration: none;
   }
-  
-  
-  
