--- a/css/primavera.css
+++ b/css/primavera.css
@@ -29,14 +29,15 @@ body {
   /* Estilos para el buscador */
   .search {
     justify-content: flex-start;
-    text-align: center;
     margin-bottom: 20px;
+    
   }
   
   /* Estilos para los botones */
   .buttons {
     text-align: center;
     margin-bottom: 50px;
+    border-radius: 30px;
   }
   svg{
     justify-content: flex-end;
@@ -45,17 +46,23 @@ body {
     display: inline-block;
     color:white;
     text-decoration: none;
-  }
-  .buttons button{
     background-color: #EBA250;
-  } 
+    border-radius: 30px;
+    padding: 10px;
+
+  }
+.buttons a:hover{
+  background-color: #A883EB;
+}
+  
+  
   
   /* Estilos para las secciones */
   .sections {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    width: 200px;
+    width: 100px;
     height: 100px;
     margin: 10px;
     background-color:#A883EB;
@@ -63,6 +70,13 @@ body {
     line-height: 100px;
     font-size: 24px;
     color: #333;
+  }
+  .sections{
+    width: 159px;
+    height: 100px;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
   }
   
   .section {
@@ -80,14 +94,26 @@ body {
     background-color: #9E713E;
     border-radius: 10px;
     text-align: center;
+    display: inline;;
   }
   img{
     width: 200px;
     height: 200px;
     border-radius: 30px;
+    
+  }
+  .filtrado{
+    background-color: rgba(169, 169, 169, 0.24);
+    width: 159px;
+    height: 300px;
+    text-align: center;
+    display: flexbox;
+    padding: 30px;
+    
   }
   #productos{
     display: flex;
+    
   }
   #productos2{
     display: flex;
@@ -131,7 +157,7 @@ body {
     width: 30px;
     height: 30px;
     background-color: #ccc;
-    color: #4ed194;
+    color: black;
     text-align: center;
     line-height: 30px;
     border-radius: 50%;
