--- a/Estilos.css/paginap.css
+++ b/Estilos.css/paginap.css
@@ -1,140 +1,141 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #4ed1943b;
-  }
-  
-  .container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
-  }
-  
-  /* Estilos para el encabezado */
-  header {
-    text-align: center;
-    padding: 20px 0;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #4ed1943b;
+}
 
-  }
- 
-  h1{
-    font-size: 48px;
-  }
-  h2{
-    font-size: 24px;
-    color: #EBA250;
-  }
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+
+}
+
+/* Estilos para el encabezado */
+header {
+  text-align: center;
+  padding: 20px 0;
+
+}
+
+h1{
+  font-size: 48px;
+}
+h2{
+  font-size: 24px;
+  color: #EBA250;
+}
+
+/* Estilos para el buscador */
+.search {
+  justify-content: flex-start;
+  margin-bottom: 20px;
   
-  /* Estilos para el buscador */
-  .search {
-    justify-content: flex-start;
-    text-align: center;
-    margin-bottom: 20px;
-  }
+}
+
+/* Estilos para los botones */
+.buttons {
+  text-align: center;
+  margin-bottom: 50px;
+  border-radius: 30px;
+}
+svg{
+  justify-content: flex-end;
+}
+.buttons a {
+  display: inline-block;
+  color:white;
+  text-decoration: none;
+  background-color: #EBA250;
+  border-radius: 30px;
+  padding: 10px;
+
+}
+.buttons a:hover{
+background-color: #A883EB;
+}
+
+
+.elemento{
+  flex: 0 0 100%;
+  text-align: center;
+}
+
+img {
+  height: 300px;
+  width: 80%;
+  margin: 50px;
   
-  /* Estilos para los botones */
-  .buttons {
-    text-align: center;
-    margin-bottom: 50px;
-  }
-  svg{
-    justify-content: flex-end;
-  }
-  .buttons a {
-    display: inline-block;
-    color:white;
-    text-decoration: none;
-  }
-  .buttons button{
-    background-color: #EBA250;
-  } 
-  
-  /* Estilos para las secciones */
-  .sections {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 200px;
-    height: 100px;
-    margin: 10px;
-    background-color:#A883EB;
-    text-align: center;
-    line-height: 100px;
-    font-size: 24px;
-    color: #333;
-  }
-  
-  .section {
-    width: 100px;
-    height: 100px;
-    margin: 10px;
-    background-color:#A883EB;
-    text-align: center;
-    line-height: 100px;
-    font-size: 24px;
-    color: #333;
-    justify-content: center;
-  }
-  .info{
-    background-color: #9E713E;
-    border-radius: 10px;
-    text-align: center;
-  }
-  img{
-    width: 200px;
-    height: 200px;
-    border-radius: 30px;
-  }
-  
-  #productos{
-    display: flex;
-  }
-  #productos2{
-    display: flex;
-  }
-  #shorts{
-    display: flex;
-  }
-  #shorts2{
-    display: flex;
-  }
-  #blusas{
-    display: flex;
-  }
-  #blusas2{
-    display: flex;
-  }
-  /* Estilos para el pie de página */
-  footer {
-    background-color: #B2F3BE;
-    padding: 20px;
-    text-align: center;
-  }
-  
-  .footer-icons {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-  .footer-icons li {
-    display: inline-block;
-    margin-right: 10px;
-  }
-  
-  .footer-icons li:last-child {
-    margin-right: 0;
-  }
-  
-  .footer-icons a {
-    display: inline-block;
-    width: 30px;
-    height: 30px;
-    background-color: #ccc;
-    color: #4ed194;
-    text-align: center;
-    line-height: 30px;
-    border-radius: 50%;
-    text-decoration: none;
-  }
+}
+
+
+
+.text-overlay {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: black;
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+  margin: 50px;
+}
+.text-dos {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: black;
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+  margin: 50px;
+}
+.text-tres {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: black;
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+}
+/* Estilos para el pie de página */
+footer {
+  background-color: #B2F3BE;
+  padding: 20px;
+  text-align: center;
+}
+
+.footer-icons {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer-icons li {
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.footer-icons li:last-child {
+  margin-right: 0;
+}
+
+.footer-icons a {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  background-color: #ccc;
+  color: black;
+  text-align: center;
+  line-height: 30px;
+  border-radius: 50%;
+  text-decoration: none;
+}
+a{
+  text-align: center;
+}
