--- a/css/primavera.css
+++ b/css/primavera.css
@@ -49,6 +49,7 @@ body {
     background-color: #EBA250;
     border-radius: 30px;
     padding: 10px;
+    
 
   }
 .buttons a:hover{
@@ -95,6 +96,8 @@ body {
     border-radius: 10px;
     text-align: center;
     display: inline;;
+    flex-direction: row-reverse;
+    
   }
   img{
     width: 200px;
@@ -113,6 +116,8 @@ body {
   }
   #productos{
     display: flex;
+    flex-direction: row-reverse
+    
     
   }
   #productos2{
@@ -161,5 +166,8 @@ body {
     text-align: center;
     line-height: 30px;
     border-radius: 50%;
+    text-decoration: none;
+  }
+  form{
     text-decoration: none;
   }
